Add jib docker build as integration test dependency